--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,27 @@
 .clip-path-ellipse {
   clip-path: ellipse(50% 40% at 50% 50%);
 }
+
+.custom-pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  margin-top: 0px;
+}
+
+.custom-bullet {
+  width: 16px;
+  height: 16px;
+  background-color: #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.custom-bullet.swiper-pagination-bullet-active {
+  background-color: #F9DF7A; /* Active bullet color */
+  width: 25px;
+  height: 8px;
+  border-radius: 30%;
+}
